fix(abc:sidebar): fix invalid menu item ellipsis when text overflow (#447)

--- a/packages/theme/styles/layout/default/fix/_sidebar-nav.less
+++ b/packages/theme/styles/layout/default/fix/_sidebar-nav.less
@@ -20,8 +20,6 @@
       overflow: hidden;
       text-overflow: ellipsis;
       position: relative;
-      display: flex;
-      align-items: center;
       user-select: none;
       &:hover {
         color: @alain-default-aside-nav-text-hover-color;
